syntax = "proto3";

package proto;

option go_package = "internal/app/grpc/proto";

import "google/protobuf/wrappers.proto";
import "internal/app/grpc/proto/common.proto";
import "internal/app/grpc/proto/requests.proto";
import "internal/app/grpc/proto/round.proto";
import "internal/app/grpc/proto/season.proto";
import "internal/app/grpc/proto/team.proto";
import "internal/app/grpc/proto/venue.proto";

service ResultService {
    rpc GetHistoricalResultsForFixture(HistoricalResultRequest) returns (stream Result) {}
    rpc GetResultsForSeason(SeasonRequest) returns (stream Result) {}
    rpc GetResultsForTeam(TeamResultRequest) returns (stream Result) {}
}

message Result {
    int64 id = 1;
    Season season = 3;
    Round round = 4;
    Venue venue = 5;
    google.protobuf.Int64Value referee_id = 6;
    Date date_time = 7;
    MatchData match_data = 8;
}

message MatchData {
    Team home_team = 1;
    Team away_team = 2;
    MatchStats stats = 3;
}

message MatchStats {
    google.protobuf.StringValue pitch = 1;
    google.protobuf.StringValue home_formation = 2;
    google.protobuf.StringValue away_formation = 3;
    google.protobuf.Int32Value home_score = 4;
    google.protobuf.Int32Value away_score = 5;
    google.protobuf.Int32Value home_pen_score = 6;
    google.protobuf.Int32Value away_pen_score = 7;
    google.protobuf.StringValue half_time_score = 8;
    google.protobuf.StringValue full_time_score = 9;
    google.protobuf.StringValue extra_time_score = 10;
    google.protobuf.Int32Value home_league_position = 11;
    google.protobuf.Int32Value away_league_position = 12;
    google.protobuf.Int32Value minutes = 13;
    google.protobuf.Int32Value added_time = 15;
    google.protobuf.Int32Value extra_time = 16;
    google.protobuf.Int32Value injury_time = 17;
}
